--- a/8、质量.md
+++ b/8、质量.md
@@ -82,7 +82,7 @@
       客户反馈与质量验证：客户对产品的质量提出了反馈或抱怨时，可以使用质量控制测量结果来作为直接证据，证明达到了质量标准。
 
 控制图
-   失控： 连续七个点在水平线上方，在控制界限内。
+   失控： 七个点连续，在控制界限内，在均值同侧。
       
 ```
 
