--- a/7、成本.md
+++ b/7、成本.md
@@ -49,7 +49,7 @@
          成员1工作后离职，成员2覆盖了原有设计，成员1就是沉没成本。
 
 应急成本
-  备用到已知风险，加到项目的基本成本上，解决风险问题。
+  备用到已知风险，加到项目的基本成本上，解决风险问题。成本预计增加，先考虑应急储备，如果足够，考虑使用应急储备来弥补成本增加，如果不足，可能需要变更管理流程调整预算。
 管理储备
   用于未知风险。
 ```
