--- a/敏捷.md
+++ b/敏捷.md
@@ -95,6 +95,19 @@ Scrum主管
 自组织
    PO怀疑团队成员疲惫，可以向团队提出来，自己解决。
    新来的团队成员可以由团队成员向开发人员介绍项目。
+需求优先级排序的方法
+   Simple Scheme 简单优先级排序
+   MoSCow 莫斯科方法
+      Must Have 必须有
+      Should Have 应该有
+      Could Have 可能有
+      Won t Have 不会有
+   100点方法
+      每个干系人分配100点，让他被不同的功能投票，功能票数最多的优先级最高。
+   KANO Analysus 卡诺分析
+      度量需求被满足与否，对满意或不满意产生的影响的模型，一般用于确认产品、服务的优先级。
+      需求优先级： 必备熟悉 > 期望熟悉 > 魅力属性
+               
 ```
 
 # 敏捷的质量管理
