--- a/4、整合.md
+++ b/4、整合.md
@@ -78,6 +78,9 @@
 
 项目收尾，可交付成果验收，在项目质保期内，如果识别到一个影响环境的缺陷，运营部门应该负责解决这个问题。
 
+项目启动人
+  发起人、项目集或项目管理办公室（PMO）、项目组合治理委员会主席或其授权代表。项目经理可以在指导委员会的授权下下进行启动项目。
+
 配置管理
   目的
     管理产品版本，确保项目产品一致性
