--- a/7、成本.md
+++ b/7、成本.md
@@ -50,6 +50,7 @@
 
 应急成本
   备用到已知风险，加到项目的基本成本上，解决风险问题。成本预计增加，先考虑应急储备，如果足够，考虑使用应急储备来弥补成本增加，如果不足，可能需要变更管理流程调整预算。
+  应急成本的多少，听取主题专家的意见比起发起人、公司的标准政策、财务部门来说更可靠。
 管理储备
   用于未知风险。
 ```
