--- a/4、整合.md
+++ b/4、整合.md
@@ -101,6 +101,29 @@
 经验教训
   风险核对单是比较重要的项目
   尽可能多的项目相关方参与到经验教训总结中
+
+工作绩效信息
+  一、进度信息
+    任务完成百分比
+    关键里程碑状态
+    进度偏差
+  二、成本信息
+    实际成本支出
+    成本偏差
+    成本绩效指数（CPI）
+  三、质量信息
+    质量验收结果
+    缺陷数量和严重程度
+    质量绩效指标
+  四、资源情况
+    资源使用情况
+    资源利用率
+  五、风险信息
+    已识别风险的状态
+    应对措施的执行情况
+  六、范围信息
+    完成情况
+    变更情况
 ```
 
 ```
