--- a/敏捷.md
+++ b/敏捷.md
@@ -25,6 +25,8 @@ Scrum主管
    传播敏捷，无论直接参与哪个团队工作，都应该帮助公司采用敏捷方法。
    负责消除阻碍团队生产力的障碍。
    与团队一起制定每日计划，协助他们积极的完成工作。
+   确保团队理解产品和项目愿景。
+   为团队成员提供培训和资源。
 开发团队
    如果开发团队在多次冲刺中意识到，无法实现发布的目标，可以与PO会议，确认优先级。
    负责项目整合管理。（在预测性项目中是PM）
