--- a/6、进度.md
+++ b/6、进度.md
@@ -53,7 +53,8 @@
 自下而上估算
   将项目分解成详细的工作包或活动，然后有负责该工作的人员进行估算，最后将估算的结果汇总起来，得到项目总体的估算。
 三点估算
-  确定最乐观的估算O、最悲观的估算P、最可能的估算M 。然后期望事件TE = ( O + 4M + P ) / 6
+  确定最乐观的估算O、最悲观的估算P、最可能的估算M 。然后期望事件TE = ( O + 4M + P ) / 6。
+  适用于面临不确定性与风险。
 
 进度网络分析
   创建进度网络模型的一种综合技术，他采用了其他几种技术，例如：关键路径法、资源优化技术、建模技术，其他分析
