--- a/敏捷.md
+++ b/敏捷.md
@@ -66,16 +66,20 @@ Scrum主管
 ```
 # 相关会议
 ```
-每日站会：
+每日站会
    PO、SM、开发团队参加，如果时间太长，可以仅仅开发团队参加，Scrum选择参加，敏捷中团队自组织。
    完成了什么，计划干什么，障碍风险问题是什么
    只识别问题，而不解决，可以在会议结束之前，将问题同步到问题日志中，然后开启另一次会议解决问题。
    常见的一个反模式是，变成了状态报告会议。团队可以举办自己的站会。自组织，轮流主持站会。
    过一下任务板或看板，其他团队依赖敏捷团队的输出，可以参加每日站会。
-回顾会议：
+回顾会议
    提高效率
    总结经验
    反思-改进-计划
+冲刺评审会
+   确定交付的故事是否满足客户期望
+   确定交付的故事是否需要更改
+   了解新需求
 ```
 # 知识点
 ```
