--- a/8、质量.md
+++ b/8、质量.md
@@ -58,7 +58,9 @@
       2、面向装配的设计（DFA）
          DFA 着重于使产品的装配过程更加简单、高效、可靠，降低装配成本和时间，提高装配质量。
       3、面向可靠性的设计（DFR）
-         DFR 以提高产品的可靠性为目标，在设计阶段就考虑产品在各种使用环境和条件下的可靠性要求，通过设计优化和可靠性分析，确保产品能够在规定的寿命期内可靠地工作
+         DFR 以提高产品的可靠性为目标，在设计阶段就考虑产品在各种使用环境和条件下的可靠性要求，通过设计优化和可靠性分析，确保产品能够在规定的寿命期内可靠地工作。
+      4、面向成本的设计
+         满足产品性能、质量、功能的要求下，尽可能低的降低成本。
    4、根本原因分析
       发现一个严重问题要先分析原因，适合根本原因分析
 6、成本效益分析
