--- a/8、质量.md
+++ b/8、质量.md
@@ -68,6 +68,11 @@
 ```
 # 知识点
 ```
+质量标准与以下三个重要方面相关
+   产品的特定事项
+   特征
+   产品等级
+
 质量标准 VS 质量管理计划 VS 质量控制测量结果
    质量管理计划
       质量管理计划包含质量标准、目标、策略、控制流程。
