--- a/8、质量.md
+++ b/8、质量.md
@@ -38,7 +38,7 @@
 4、进行测试
    在 IT 领域中，可以进行测试，来避免可交付成果不符合验收标准清单中的几项内容。
 5、管理质量的方法
-   1、六西格玛
+   1、六西格玛 分析和评估改进的质量改进工具
       是一种质量管理方法，通过系统的方法和工具、不断改进过程。在实施六西格玛时，需要领导的承诺与支持，员工的培训和教育，以及持续的改进和文化的变革。
       DMAIC流程
          定义 Define
